Fix Searching on Safari by including submit button

--- a/src/app/content-query-page/content-query-page.component.css
+++ b/src/app/content-query-page/content-query-page.component.css
@@ -140,7 +140,8 @@ img {
   box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
 
-.search-container {
+.search_container {
+  display: flex;
 }
 
 .search-field {
@@ -167,4 +168,12 @@ button {
 button:focus {
   outline: none;
   box-shadow: none;
+}
+
+.search-button {
+  appearance: none;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  background-color: transparent;
 }
